Pass --enable-native-access=io.netty.common when running Surefire